--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,6 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -49,4 +48,9 @@ dependencies {
     implementation 'com.android.volley:volley:1.2.1'
     //like buttom
     implementation 'com.github.jd-alexander:LikeButton:0.2.3'
+    //cloudinary
+    implementation 'com.cloudinary:cloudinary-android:2.3.1'
+    //Image
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
 }
